--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
 <head>
   <title>My First Web Page</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <h1>Welcome to My Web Page. My name is pinta</h1>
@@ -12,7 +13,6 @@
     <li>Item 2</li>
     <li>Item 3</li>
   </ul>
-  <img src="image.jpg" alt="Image Description">
 
   <script src="script.js"></script>
 </body>
